--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,19 @@
-spring.datasource.url=jdbc:clickhouse://216.48.176.80:8123/default
-spring.datasource.username=default
-spring.datasource.password=
-spring.datasource.driver-class-name=com.clickhouse.jdbc.ClickHouseDriver
-spring.datasource.hikari.maximum-pool-size=10
-server.port=8080
+# MySQL (Primary for JPA)
+spring.datasource.url=jdbc:mysql://localhost:3306/hunter?createDatabaseIfNotExist=true
+spring.datasource.mysql.username=root
+spring.datasource.mysql.password=
+spring.datasource.mysql.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ClickHouse
+spring.datasource.clickhouse.url=jdbc:clickhouse://216.48.176.80:8123/default
+spring.datasource.clickhouse.username=default
+spring.datasource.clickhouse.password=
+spring.datasource.clickhouse.driver-class-name=com.clickhouse.jdbc.ClickHouseDriver
+
+# JPA Configuration (MySQL)
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Disable default datasource auto-config
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
