--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # MySQL (Primary for JPA)
-spring.datasource.url=jdbc:mysql://localhost:3306/hunter?createDatabaseIfNotExist=true
-spring.datasource.mysql.username=root
-spring.datasource.mysql.password=
-spring.datasource.mysql.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://164.52.196.106:3306/hunter?createDatabaseIfNotExist=true
+spring.datasource.username=appuser
+spring.datasource.password=your_password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ClickHouse
-spring.datasource.clickhouse.url=jdbc:clickhouse://216.48.176.80:8123/default
+spring.datasource.clickhouse.url=jdbc:clickhouse://216.48.176.217:8123/default
 spring.datasource.clickhouse.username=default
 spring.datasource.clickhouse.password=
 spring.datasource.clickhouse.driver-class-name=com.clickhouse.jdbc.ClickHouseDriver
